<resources>
    <string name="app_name">csis3126_stours</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EventName">Event Name</string>
    <string name="EventDescrip">Description</string>
    <string name="Date">Date</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="add_event">Add Event</string>
    <string name="address">Address</string>
    <string name="textview">TextView</string>
    <string name="Users">Social</string>
    <string name="nearby">Nearby</string>
    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="concerts">Concerts</string>
    <string name="outdoors">Outdoors</string>
    <string name="kid_friendly">Kid Friendly</string>
    <string name="business">Business</string>
    <string name="name">Name</string>
    <string name="fill_out_the_fields_below">Fill out the fields below!</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="interests">Interests</string>
    <string name="tap_to_upload_profile_picture">Tap To Upload Profile Picture</string>
    <string name="continu">Continue</string>
    <string name="delete">Delete</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="post_event">Post Event</string>
    <string name="event_tags">Event Tags</string>
    <string name="tap_the_icon_above_to_change_your_profile_picture">Tap the icon above to change your profile picture</string>
    <string name="submit">submit</string>
    <string name="attending">Attending</string>
    <string name="_0">0</string>
    <string name="date">Date:</string>
    <string name="state">State:</string>
    <string name="location">Location:</string>
    <string name="attend">attend</string>
    <string-array name="states">
        <item>Select your state</item>
        <item>Maine</item>
        <item>Massachusetts</item>
        <item>Vermont</item>
        <item>Rhode Island</item>
        <item>New Hampshire</item>
        <item>Connecticut</item>
    </string-array>
</resources>